
### Changed
- Renamed "Areas of Practice" to "Accepts Referrals For" where appropriate.
- Specialty pages now load much faster (~1 to ~2 seconds) due to replacing hide/show table filtering with a table filtering system that destroys/recreates table rows on each filter.
- User edit form now warns admins if a user is missing a division.
- Upgrade to Rails 3.2 now fully complete.
- Local-only: Added browser caching via Cloudflare CDN to increase page loading speeds.
- Local-only:  Moved DNS lookup server to fault tolerant Cloudflare to prevent emergency downtimes (e.g. if a major earthquake hits local servers).
- Rename "In Progress" Speciality edit checkbox to "In Progress / Hidden"
- Moved open-source Github repository to "pathwaysmedical" from "warneboldt"
- CR: Address and specialization fields are now replaced with comment boxes when user edit clinics and specializations

### Fixed
- CR:  Clinic location/specialist office rearranging issue now fixed.
- "Latest Specialists and Clinics Updates" now hides specialists/clinics updates if the specialty and city of the clinic/specialist does not match with the local referral area of the Division for that specialty.
- User edit form now correctly places users into divisions.
- User edit form now disables HTML autocomplete.
- On Division edit pages, Internet Explorer browsers now correctly render specialty/city checkboxes in the local referral area table.
- Content Item pages now cache correctly so that different versions of the page are shown for admins and users.
- Referral form feedback button now disables during submission to prevent duplicate submissions.
- Error on referral form update
- Correct version of specialist office now used in specialist and clinic updates
- S3 uses SSL to serve attachment
- Can enter addresses for new specialist offices

### Removed:
- Removed old reporting interface graphs from the codebase that were already disabled by earlier developers.
- Option to delete review item from index view.